card section completed, for small & medium devices as well

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Influencer Gear</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -46,7 +48,148 @@
     </header>
 
     <main>
+        <section class="partners">
+            <img class="partners-logo" src="logos/Alibaba.svg" alt="">
+            <img class="partners-logo" src="logos/Amazon.svg" alt="">
+            <img class="partners-logo" src="logos/Daraz.pk Logo.svg" alt="">
+            <img class="partners-logo" src="logos/Ebay.svg" alt="">
+            <img class="partners-logo" src="logos/Rakuten.svg" alt="">
+            <img class="partners-logo" src="logos/Walmart.svg" alt="">
+            <img class="partners-logo" src="logos/Target.svg" alt="">          
+        </section>
 
+        <section class="card-box-container">
+            <h4 class="card-box-main-title">Popular Collection</h4>
+            <div class="card-box">
+                <div class="card-box-items">
+                    <img src="images/tripod.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Flex Tripod</h4>
+                    <p class="card-box-price">$50.48</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/mic.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Microphone</h4>
+                    <p class="card-box-price">$120.25</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/airpod.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Airpods</h4>
+                    <p class="card-box-price">$100.00</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/drone.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Drone</h4>
+                    <p class="card-box-price">$980.25</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/lights.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Light Setup</h4>
+                    <p class="card-box-price">$1200.00</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/setup.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Photoshoot set</h4>
+                    <p class="card-box-price">$820.40</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/camera.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Vlogging Camera</h4>
+                    <p class="card-box-price">$1800.80</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/single-light.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Green Screen</h4>
+                    <p class="card-box-price">$25.48</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                <div class="card-box-items">
+                    <img src="images/action.png" alt="" class="card-image">
+                    <h4 class="card-box-title">Action Camera</h4>
+                    <p class="card-box-price">$380.00</p>
+                    <small class="card-item-review">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span>4.99</span>
+                    </small>
+                    <p class="card-box-desc">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                </div>
+                
+            </div>
+        </section>
     </main>
 
     <footer>
